@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'checkstyle'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'com.gradleup.shadow' version '9.5.1'
 }
 
@@ -12,6 +13,11 @@ java {
 
 checkstyle {
     toolVersion = '11.0.0'
+}
+
+javafx {
+    version = '25'
+    modules = ['javafx.controls']
 }
 
 repositories {
@@ -42,7 +48,8 @@ test {
 }
 
 application {
-    mainClass = 'harold.Harold'
+    mainClass = 'harold.gui.Launcher'
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
 
 jar {
@@ -54,8 +61,18 @@ jar {
 
 shadowJar {
     archiveFileName = 'harold.jar'
+    manifest {
+        attributes(
+                'Main-Class': 'harold.gui.Launcher',
+                'Enable-Native-Access': 'ALL-UNNAMED'
+        )
+    }
 }
 
-run {
+tasks.register('runCli', JavaExec) {
+    group = 'application'
+    description = 'Runs Harold using the command-line interface.'
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'harold.Harold'
     standardInput = System.in
 }
